--- a/package.json
+++ b/package.json
@@ -29,7 +29,21 @@
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.16",
+    "prettier-plugin-tailwindcss": "^0.5.1"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "bits-ui": "^0.21.9",
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.379.0",
+    "mode-watcher": "^0.3.0",
+    "paneforge": "^0.0.4",
+    "svelte-sonner": "^0.3.24",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1"
+  }
 }
