--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,8 @@ linux:
     - source ~/.bashrc
     - rustup target add aarch64-unknown-linux-gnu
     - apt-get update; apt-get install -y ibwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev
-    # - cargo install tauri-cli
-    # - cargo-tauri build
+    - cargo install tauri-cli
+    - cargo-tauri build
     - cargo-tauri build --target aarch64-unknown-linux-gnu
 
   artifacts:
@@ -80,7 +80,7 @@ macos:
     - eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
     - source ~/.bashrc
     - rustup target add x86_64-apple-darwin aarch64-apple-darwin
-    - brew install openssl@1.1 libwebkit2gtk
+    - brew install openssl@1.1 libwebkit2gtk libwebsockets
     - cargo install tauri-cli
     - cargo-tauri build --target x86_64-apple-darwin
     - cargo-tauri build --target aarch64-apple-darwin
