--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,134 +1,79 @@
-cache:
-    # most npm libraries will only have 1 entry for the base project deps
-    - &global_cache_node_mods
-      key:
-          files:
-              - package-lock.json
-      paths:
-          - node_modules/
-      policy: pull
-
-install:
-  image: oven/bun
-  stage: .pre   # always first, no matter if it is listed in stages
-  cache:
-    - <<: *global_cache_node_mods
-      when: on_success
-      policy: pull-push
-    - key: ${CI_JOB_NAME}
-      paths:
-        - .node_modules/
-      when: on_success
-      policy: pull-push
-  script:
-    # define cache dir & use it npm!
-    - bun i
-
 stages:
+  - setup
   - build
-  # - deploy
-  # - linux
-  # - windows
-  # - macos
-  # - android
-  # - ios
 
+# Variables globales
 variables:
-  CARGO_TERM_COLOR: always
+  RUST_VERSION: "stable"
+  TAURI_VERSION: "latest"
+  NODE_CACHE_PATH: "node_modules"
+  CARGO_BIN_PATH: "/root/.cargo/bin"
+
+setup:
+  stage: setup
+  image: rust:${RUST_VERSION}
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${CARGO_BIN_PATH}/tauri
+      - ${NODE_CACHE_PATH}
+  script:
+    - rustup update
+    - cargo install tauri-cli --version ${TAURI_VERSION}
+    - curl -fsSL https://bun.sh/install | bash
+    - source ~/.bashrc
+    - bun i
 
 linux:
   stage: build
-  image: rust:latest
+  image: rust:${RUST_VERSION}
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${CARGO_BIN_PATH}/tauri
+      - ${NODE_CACHE_PATH}
   script:
-    - curl -fsSL https://bun.sh/install | bash
-    - source ~/.bashrc
-    - rustup target add aarch64-unknown-linux-gnu
-    - apt-get update; apt-get install -y ibwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev
-    - cargo install tauri-cli
-    # - cargo-tauri build
-    - cargo-tauri build --target aarch64-unknown-linux-gnu
-
+    - sudo apt update
+    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - source ~/.cargo/env
+    - rustup target add x86_64-unknown-linux-gnu
+    - bun tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
-      - target/release/bundle/deb
-    expire_in: 1 week
+      - target/release/bundle/
 
 windows:
   stage: build
-  image: rust:latest
+  image: rust:${RUST_VERSION}
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${CARGO_BIN_PATH}/tauri
+      - ${NODE_CACHE_PATH}
   script:
-    - rustup target add x86_64-pc-windows-msvc aarch64-pc-windows-msvc
-    - apt-get update; apt-get install -y ibwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev mingw-w64
-    - curl -fsSL https://bun.sh/install | bash
-    - source ~/.bashrc
-    - cargo install tauri-cli
-    # - cargo-tauri build --target x86_64-pc-windows-msvc
-    - cargo-tauri build --target aarch64-pc-windows-msvc
-
+    - sudo apt update
+    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - source ~/.cargo/env
+    - rustup target add x86_64-pc-windows-gnu
+    - bun tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
-      - target/release/bundle/msi
-    expire_in: 1 week
+      - target/release/bundle/
 
-macos:
+mac:
   stage: build
-  image: rust:latest
+  image: rust:${RUST_VERSION}
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${CARGO_BIN_PATH}/tauri
+      - ${NODE_CACHE_PATH}
   script:
-    - curl -fsSL https://bun.sh/install | bash
-    - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-    - (echo; echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"') >> /root/.bashrc
-    - eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-    - source ~/.bashrc
-    - rustup target add x86_64-apple-darwin aarch64-apple-darwin
-    #- brew install openssl@1.1 libwebkit2gtk libwebsockets
-    - cargo install tauri-cli
-    - cargo-tauri build --target x86_64-apple-darwin
-    - cargo-tauri build --target aarch64-apple-darwin
-
+    - sudo apt update
+    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - source ~/.cargo/env
+    - rustup target add x86_64-apple-darwin
+    - bun tauri build --target x86_64-apple-darwin
   artifacts:
     paths:
-      - target/release/bundle/dmg
-    expire_in: 1 week
-
-# android:
-#   stage: android
-#   image: rust:latest
-#   script:
-#     - apt install -y openjdk-18-jdk
-#     - wget https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2024.1.1.7/android-studio-2024.1.1.7-linux.tar.gz
-#     - tar -zxvf android-studio-2024.1.1.7-linux.tar.gz
-#     - sudo mv android-studio /opt/
-#     - sudo ln -sf /opt/android-studio/bin/studio.sh /bin/android-studio
-#     - export ANDROID_HOME="$HOME/Android/Sdk"; export NDK_HOME="$ANDROID_HOME/ndk/$(ls -1 $ANDROID_HOME/ndk)"; export JAVA_HOME=/opt/android-studio/jbr
-#     - rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
-#     - apt-get update; apt-get install -y ibwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev
-#     - cargo install tauri-cli
-#     - cargo-tauri build --target aarch64-linux-android
-#     - cargo-tauri build --target i686-linux-android
-#     - cargo-tauri build --target armv7-linux-androideabi
-#     - cargo-tauri build --target x86_64-linux-android
-#     - tar -czf sending_unicorns_android.tar.gz target/aarch64-linux-android/debug/sending_unicorns.apk target/i686-linux-android/debug/sending_unicorns.apk target/armv7-linux-androideabi/debug/sending_unicorns.apk target/x86_64-linux-android/debug/sending_unicorns.apk
-
-#   artifacts:
-#     paths:
-#       - sending_unicorns_android.tar.gz
-#     expire_in: 1 week
-    
-# ios:
-#   stage: ios
-#   image: rust:latest
-#   script:
-#     - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-#     - brew install cocoapods
-#     - rustup target add aarch64-apple-ios x86_64-apple-ios aarch64-apple-ios-sim
-#     - apt-get update; apt-get install -y ibwebkit2gtk-4.0-dev build-essential curl wget file libssl-dev libgtk-3-dev librsvg2-dev
-#     - cargo install tauri-cli
-#     - cargo-tauri build --target arm64e-apple-ios
-#     - cargo-tauri build --target x86_64-apple-ios
-#     - cargo-tauri build --target aarch64-apple-ios-sim
-#     - tar -czf sending_unicorns_ios.tar.gz target/arm64e-apple-ios/debug/sending_unicorns.ipa target/x86_64-apple-ios/debug/sending_unicorns.ipa target/aarch64-apple-ios-sim/debug/sending_unicorns.ipa
-
-#   artifacts:
-#     paths:
-#       - sending_unicorns_ios.tar.gz
-#     expire_in: 1 week
+      - target/release/bundle/
