--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   RUST_VERSION: "latest"
   TAURI_VERSION: "latest"
   NODE_CACHE_PATH: "node_modules"
-  CARGO_BIN_PATH: "/root/.cargo/bin"
+  CARGO_BIN_PATH: "~/.cargo/bin"
 
 setup:
   stage: setup
@@ -33,8 +33,8 @@ linux:
       - ${CARGO_BIN_PATH}/tauri
       - ${NODE_CACHE_PATH}
   script:
-    - sudo apt update
-    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt update
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
     - source ~/.cargo/env
     - rustup target add x86_64-unknown-linux-gnu
     - bun tauri build --target x86_64-unknown-linux-gnu
@@ -51,8 +51,8 @@ windows:
       - ${CARGO_BIN_PATH}/tauri
       - ${NODE_CACHE_PATH}
   script:
-    - sudo apt update
-    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt update
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
     - source ~/.cargo/env
     - rustup target add x86_64-pc-windows-gnu
     - bun tauri build --target x86_64-pc-windows-gnu
@@ -69,8 +69,8 @@ mac:
       - ${CARGO_BIN_PATH}/tauri
       - ${NODE_CACHE_PATH}
   script:
-    - sudo apt update
-    - sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt update
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
     - source ~/.cargo/env
     - rustup target add x86_64-apple-darwin
     - bun tauri build --target x86_64-apple-darwin
