--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ variables:
   RUST_VERSION: "latest"
   TAURI_VERSION: "latest"
   NODE_CACHE_PATH: "node_modules"
-  CARGO_BIN_PATH: "~/.cargo/bin"
 
 setup:
   stage: setup
@@ -15,11 +14,8 @@ setup:
   cache:
     key: tauri-cli-cache
     paths:
-      - ${CARGO_BIN_PATH}/tauri
       - ${NODE_CACHE_PATH}
   script:
-    - rustup update
-    - cargo install tauri-cli
     - curl -fsSL https://bun.sh/install | bash
     - source ~/.bashrc
     - bun i
@@ -37,6 +33,7 @@ linux:
     - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
     - source ~/.cargo/env
     - rustup target add x86_64-unknown-linux-gnu
+    - cargo install tauri-cli
     - bun tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
@@ -52,9 +49,12 @@ windows:
       - ${NODE_CACHE_PATH}
   script:
     - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev nsis
     - source ~/.cargo/env
     - rustup target add x86_64-pc-windows-gnu
+    - cargo install tauri-cli
+    - cargo install xwin
+    - xwin splat --output ~/.xwin --disable-symlinks
     - bun tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
@@ -73,6 +73,7 @@ mac:
     - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
     - source ~/.cargo/env
     - rustup target add x86_64-apple-darwin
+    - cargo install tauri-cli
     - bun tauri build --target x86_64-apple-darwin
   artifacts:
     paths:
