--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ linux:
       - ${NODE_CACHE_PATH}
   script:
     - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
     - source ~/.cargo/env
     - rustup target add x86_64-unknown-linux-gnu
     - cargo install tauri-cli
@@ -49,7 +49,7 @@ windows:
       - ${NODE_CACHE_PATH}
   script:
     - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev nsis
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev nsis -y
     - source ~/.cargo/env
     - rustup target add x86_64-pc-windows-gnu
     - cargo install tauri-cli
@@ -70,7 +70,7 @@ mac:
       - ${NODE_CACHE_PATH}
   script:
     - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
     - source ~/.cargo/env
     - rustup target add x86_64-apple-darwin
     - cargo install tauri-cli
