--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,10 @@ setup:
 build_view:
   stage: build
   image: oven/bun
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${NODE_CACHE_PATH}
   script:
     - bun run build
   artifacts:
@@ -43,7 +47,7 @@ linux:
     - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
     - rustup target add x86_64-unknown-linux-gnu
     - cargo install tauri-cli
-    - bun tauri build --target x86_64-unknown-linux-gnu
+    - cargo-tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
       - target/release/bundle/
@@ -61,7 +65,7 @@ windows:
     - rustup target add x86_64-pc-windows-gnu
     - cargo install tauri-cli
     - cargo install xwin
-    - xwin splat --output ~/.xwin --disable-symlinks
+    - xwin splat --output ~/.xwin --disable-symlinks -y
     - bun tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
@@ -79,7 +83,7 @@ mac:
     - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
     - rustup target add x86_64-apple-darwin
     - cargo install tauri-cli
-    - bun tauri build --target x86_64-apple-darwin
+    - cargo-tauri build --target x86_64-apple-darwin
   artifacts:
     paths:
       - target/release/bundle/
@@ -94,7 +98,7 @@ other_linux:
   script:
     - rustup target add x86_64-unknown-linux-gnu
     - cargo install tauri-cli
-    - bun tauri build --target x86_64-unknown-linux-gnu
+    - cargo-tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
       - target/release/bundle/
