--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,26 +35,9 @@ build_view:
       - build
     expire_in: 1 hour
 
-linux:
-  stage: packages
-  image: rust:${RUST_VERSION}
-  cache:
-    key: tauri-cli-cache
-    paths:
-      - ${NODE_CACHE_PATH}
-  script:
-    - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
-    - rustup target add x86_64-unknown-linux-gnu
-    - cargo install tauri-cli
-    - cargo-tauri build --target x86_64-unknown-linux-gnu
-  artifacts:
-    paths:
-      - target/release/bundle/
-
 windows:
   stage: packages
-  image: rust:${RUST_VERSION}
+  image: ivangabriele/tauri:debian-bullseye-18
   cache:
     key: tauri-cli-cache
     paths:
@@ -65,15 +48,15 @@ windows:
     - rustup target add x86_64-pc-windows-gnu
     - cargo install tauri-cli
     - cargo install xwin
-    - xwin splat --output ~/.xwin --disable-symlinks -y
+    - xwin splat --output ~/.xwin --disable-symlinks --accept-license
     - bun tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
-      - target/release/bundle/
+      - src-tauri/target/x86_64-pc-windows-gnu/release/bundle/
 
 mac:
   stage: packages
-  image: rust:${RUST_VERSION}
+  image: ivangabriele/tauri:debian-bullseye-18
   cache:
     key: tauri-cli-cache
     paths:
@@ -86,9 +69,9 @@ mac:
     - cargo-tauri build --target x86_64-apple-darwin
   artifacts:
     paths:
-      - target/release/bundle/
+      - src-tauri/target/x86_64-apple-darwin/release/bundle/
 
-other_linux:
+linux:
   stage: packages
   image: ivangabriele/tauri:debian-bullseye-18
   cache:
@@ -101,4 +84,4 @@ other_linux:
     - cargo-tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
-      - target/release/bundle/
+      - src-tauri/target/x86_64-unknown-linux-gnu/release/bundle/
