--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,18 +37,12 @@ build_view:
 
 windows:
   stage: packages
-  image: ivangabriele/tauri:debian-bullseye-18
+  image: ajustor/tauri-cli:windows
   cache:
     key: tauri-cli-cache
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev nsis -y
-    - rustup target add x86_64-pc-windows-gnu
-    - cargo install tauri-cli
-    - cargo install xwin
-    - xwin splat --output ~/.xwin --disable-symlinks --accept-license
     - bun tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
@@ -56,16 +50,12 @@ windows:
 
 mac:
   stage: packages
-  image: ivangabriele/tauri:debian-bullseye-18
+  image: ajustor/tauri-cli:macos
   cache:
     key: tauri-cli-cache
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - apt update
-    - apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev -y
-    - rustup target add x86_64-apple-darwin
-    - cargo install tauri-cli
     - cargo-tauri build --target x86_64-apple-darwin
   artifacts:
     paths:
@@ -73,14 +63,12 @@ mac:
 
 linux:
   stage: packages
-  image: ivangabriele/tauri:debian-bullseye-18
+  image: ajustor/tauri-cli:linux
   cache:
     key: tauri-cli-cache
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - rustup target add x86_64-unknown-linux-gnu
-    - cargo install tauri-cli
     - cargo-tauri build --target x86_64-unknown-linux-gnu
   artifacts:
     paths:
