Rewrite(rewrite): change windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,23 +43,23 @@ windows:
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - cargo tauri build --target x86_64-pc-windows-msvc
+    - cargo-tauri build --target x86_64-pc-windows-msvc
   artifacts:
     paths:
       - src-tauri/target/x86_64-pc-windows-msvc/release/bundle/
 
-mac:
-  stage: packages
-  image: ajustor/tauri-cli:macos
-  cache:
-    key: tauri-cli-cache
-    paths:
-      - ${NODE_CACHE_PATH}
-  script:
-    - cargo-tauri build --target x86_64-apple-darwin
-  artifacts:
-    paths:
-      - src-tauri/target/x86_64-apple-darwin/release/bundle/
+# mac:
+#   stage: packages
+#   image: ajustor/tauri-cli:macos
+#   cache:
+#     key: tauri-cli-cache
+#     paths:
+#       - ${NODE_CACHE_PATH}
+#   script:
+#     - cargo-tauri build --target x86_64-apple-darwin
+#   artifacts:
+#     paths:
+#       - src-tauri/target/x86_64-apple-darwin/release/bundle/
 
 linux:
   stage: packages
