--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,8 @@ build_view:
     expire_in: 1 hour
 
 windows:
+  tags: 
+    - shared-windows
   stage: packages
   image: ajustor/tauri-cli:windows
   cache:
