feat(rewrite): readd mac and try another way for windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,18 +50,20 @@ windows:
     paths:
       - src-tauri/target/x86_64-pc-windows-msvc/release/bundle/
 
-# mac:
-#   stage: packages
-#   image: ajustor/tauri-cli:macos
-#   cache:
-#     key: tauri-cli-cache
-#     paths:
-#       - ${NODE_CACHE_PATH}
-#   script:
-#     - cargo-tauri build --target x86_64-apple-darwin
-#   artifacts:
-#     paths:
-#       - src-tauri/target/x86_64-apple-darwin/release/bundle/
+mac:
+  stage: packages
+  image: ajustor/tauri-cli:macos
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${NODE_CACHE_PATH}
+  script:
+    - rustup target add x86_64-apple-darwin
+    - cargo install tauri-cli
+    - cargo-tauri build --target x86_64-apple-darwin
+  artifacts:
+    paths:
+      - src-tauri/target/x86_64-apple-darwin/release/bundle/
 
 linux:
   stage: packages
