--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,10 +43,10 @@ windows:
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - cargo-tauri build --target x86_64-pc-windows-msvc
+    - cargo-tauri build --target x86_64-pc-windows-gnu
   artifacts:
     paths:
-      - src-tauri/target/x86_64-pc-windows-msvc/release/bundle/
+      - src-tauri/target/x86_64-pc-windows-gnu/release/bundle/
 
 mac:
   stage: packages
