--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tauri-apps/cli": "^1.5.14",
+    "@tauri-apps/api": "^2.0.0-beta.12",
+    "@tauri-apps/cli": "^2.0.0-beta.18",
     "@types/eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
