--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,8 +15,7 @@ rust-version = "1.60"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
-tokio = { version = "1", features = ["full"] }
+tauri-plugin-http = { version = "2.0.0-beta.7" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta", features = [] }
@@ -26,4 +25,4 @@ home = "0.5.9"
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
