--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ windows:
     paths:
       - ${NODE_CACHE_PATH}
   script:
-    - cargo-tauri build --target x86_64-pc-windows-msvc --no-bundler
+    - cargo-tauri build --target x86_64-pc-windows-msvc --no-bundle
     - makensis windows_builder.nsi
   artifacts:
     paths:
