Tauri2(tauri2): adding env vars

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,10 @@ windows:
     paths:
       - ${NODE_CACHE_PATH}
   script:
+    - export CC_x86_64_pc_windows_gnu=x86_64-w64-mingw32-gcc
+    - export CXX_x86_64_pc_windows_gnu=x86_64-w64-mingw32-g++
+    - export AR_x86_64_pc_windows_gnu=x86_64-w64-mingw32-ar
+    - export CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER=x86_64-w64-mingw32-gcc
     - cargo-tauri build --target x86_64-pc-windows-msvc --no-bundle
     - makensis windows_builder.nsi
   artifacts:
