--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,11 +43,12 @@ windows:
     paths:
       - ${NODE_CACHE_PATH}
   script:
+    - rustup target add x86_64-pc-windows-gnu 
     - export CC_x86_64_pc_windows_gnu=x86_64-w64-mingw32-gcc
     - export CXX_x86_64_pc_windows_gnu=x86_64-w64-mingw32-g++
     - export AR_x86_64_pc_windows_gnu=x86_64-w64-mingw32-ar
     - export CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER=x86_64-w64-mingw32-gcc
-    - cargo-tauri build --target x86_64-pc-windows-msvc --no-bundle
+    - cargo-tauri build --target x86_64-pc-windows-gnu --no-bundle
     - makensis windows_builder.nsi
   artifacts:
     paths:
