--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tauri": "tauri"
   },
   "devDependencies": {
+    "@rollup/rollup-darwin-x64": "^4.18.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
@@ -41,7 +42,7 @@
   "dependencies": {
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
-    "lucide-svelte": "^0.379.0",
+    "lucide-svelte": "^0.381.0",
     "mode-watcher": "^0.3.0",
     "paneforge": "^0.0.4",
     "svelte-sonner": "^0.3.24",
