--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta", features = [] }
 home = "0.5.9"
 tauri-plugin-theme = "0.4.1"
+uuid = { version = "1.8.0", features = ["v4", "serde"] }
+derivative = "2.2.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
