--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ rust-version = "1.60"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri-plugin-http = { version = "2.0.0-beta.7" }
+tauri-plugin-http = { version = "2.0.0-beta.7", features = ["json"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta", features = [] }
