--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,11 @@ home = "0.5.9"
 tauri-plugin-theme = "0.4.1"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 derivative = "2.2.0"
+specta = "=2.0.0-rc.12"
+tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
+
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
+tauri-plugin-global-shortcut = { version = "2.0.0-beta.6" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
