--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,9 @@ variables:
 setup:
   stage: setup
   image: rust:${RUST_VERSION}
+  rules: 
+    - if: $CI_COMMIT_TAG
+      when: never
   cache:
     key: tauri-cli-cache
     paths:
@@ -24,6 +27,9 @@ setup:
 build_view:
   stage: build
   image: oven/bun
+  rules: 
+    - if: $CI_COMMIT_TAG
+      when: never
   cache:
     key: tauri-cli-cache
     paths:
@@ -38,6 +44,9 @@ build_view:
 windows:
   stage: packages
   image: ajustor/tauri2-cli:windows
+  rules: 
+    - if: $CI_COMMIT_TAG
+      when: never
   cache:
     key: tauri-cli-cache
     paths:
@@ -73,6 +82,9 @@ windows:
 linux:
   stage: packages
   image: ajustor/tauri2-cli:linux
+  rules: 
+    - if: $CI_COMMIT_TAG
+      when: never
   cache:
     key: tauri-cli-cache
     paths:
@@ -83,3 +95,19 @@ linux:
   artifacts:
     paths:
       - output
+
+release_job:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG                 # Run this job when a tag is created
+  script:
+    - echo "running release_job"
+  release:                               # See https://docs.gitlab.com/ee/ci/yaml/#release for available properties
+    tag_name: '$CI_COMMIT_TAG'
+    description: '$CI_COMMIT_TAG'
+  assets:
+    - name: 'Sending Unicorns Windows.zip'
+      url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=windows&file_type=archive'
+    - name: 'Sending Unicorns Linux.zip'
+      url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=linux&file_type=archive'
