--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,7 +107,8 @@ release_job:
     tag_name: '$CI_COMMIT_TAG'
     description: '$CI_COMMIT_TAG'
     assets:
-      - name: 'Sending Unicorns Windows.zip'
-        url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=windows&file_type=archive'
-      - name: 'Sending Unicorns Linux.zip'
-        url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=linux&file_type=archive'
+      links:
+        - name: 'Sending Unicorns Windows.zip'
+          url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=windows&file_type=archive'
+        - name: 'Sending Unicorns Linux.zip'
+          url: '$CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/artifacts/master/download?job=linux&file_type=archive'
