--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,8 +97,8 @@ linux:
     paths:
       - output
 
-release_job:
-  stage: release
+release:
+  stage: release_job
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
     - if: $CI_COMMIT_TAG                 # Run this job when a tag is created
