--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ setup:
   rules: 
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH
   cache:
     key: tauri-cli-cache
     paths:
@@ -32,7 +32,7 @@ build_view:
   rules: 
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH
   cache:
     key: tauri-cli-cache
     paths:
@@ -50,7 +50,7 @@ windows:
   rules: 
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH
   cache:
     key: tauri-cli-cache
     paths:
@@ -89,7 +89,7 @@ linux:
   rules: 
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH
   cache:
     key: tauri-cli-cache
     paths:
