Tauri2(tauri2): adding macos build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,21 +67,21 @@ windows:
     paths:
       - "SendingUnicorns Setup.exe"
 
-# mac:
-#   stage: packages
-#   image: ajustor/tauri-cli:macos
-#   cache:
-#     key: tauri-cli-cache
-#     paths:
-#       - ${NODE_CACHE_PATH}
-#   script:
-#     - rustup target add x86_64-apple-darwin
-#     - cargo install tauri-cli
-#     - bun build --target x86_64-apple-darwin
-#     - mv src-tauri/target/x86_64-apple-darwin/release/bundle/ output
-#   artifacts:
-#     paths:
-#       - output
+mac:
+  stage: packages
+  image: ajustor/tauri-cli:macos
+  cache:
+    key: tauri-cli-cache
+    paths:
+      - ${NODE_CACHE_PATH}
+  script:
+    - rustup target add x86_64-apple-darwin
+    - cargo install tauri-cli
+    - cargo-tauri --target x86_64-apple-darwin
+    - mv src-tauri/target/x86_64-apple-darwin/release/bundle/ output
+  artifacts:
+    paths:
+      - output
 
 linux:
   stage: packages
