Tauri2(tauri2): env and vars v1

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tauri-apps/api": "^2.0.0-beta.13",
     "@tauri-apps/cli": "^2.0.0-beta.20",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
     "@types/eslint": "^8.56.10",
+    "@types/mustache": "^4.2.5",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.5",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
@@ -44,6 +45,7 @@
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.411.0",
     "mode-watcher": "^0.3.0",
+    "mustache": "^4.2.0",
     "paneforge": "^0.0.4",
     "svelte-sonner": "^0.3.24",
     "tailwind-merge": "^2.3.0",
