--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   "dependencies": {
     "bits-ui": "^0.21.12",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
     "lucide-svelte": "^0.411.0",
     "mode-watcher": "^0.3.0",
     "mustache": "^4.2.0",
     "paneforge": "^0.0.4",
+    "svelte-codemirror-editor": "^1.4.0",
     "svelte-sonner": "^0.3.24",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
