--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ uuid = { version = "1.8.0", features = ["v4", "serde"] }
 derivative = "2.2.0"
 specta = "=2.0.0-rc.12"
 tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
+proxy_cfg = "0.4.1"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.0.0-beta.6"
