--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.2.5",
     "bits-ui": "^0.21.12",
     "clsx": "^2.1.1",
     "codemirror": "^6.65.7",
