--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tauri-apps/api": "^2.0.0-beta.15",
-    "@tauri-apps/cli": "^2.0.0-beta.22",
+    "@tauri-apps/cli": "^2.1.0",
     "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.7",
     "@types/eslint": "^9.6.0",
     "@types/mustache": "^4.2.5",
