--- a/package.json
+++ b/package.json
@@ -13,46 +13,47 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.2",
-    "@sveltejs/adapter-static": "^3.0.2",
-    "@sveltejs/kit": "^2.5.18",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "@tauri-apps/api": "^2.0.0-beta.15",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.1",
+    "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/cli": "^2.1.0",
-    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.7",
-    "@types/eslint": "^9.6.0",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0",
+    "@types/eslint": "^9.6.1",
     "@types/mustache": "^4.2.5",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "^5.0.0-next.197",
-    "svelte-check": "^3.8.4",
-    "tailwindcss": "^3.4.6",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.4"
+    "eslint-plugin-svelte": "^2.46.1",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "svelte": "^5.6.2",
+    "svelte-check": "^4.1.1",
+    "tailwindcss": "^3.4.16",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.2"
   },
   "type": "module",
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.2.5",
-    "bits-ui": "^0.21.12",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
     "codemirror": "^6.65.7",
-    "lucide-svelte": "^0.414.0",
-    "mode-watcher": "^0.4.0",
+    "lucide-svelte": "^0.468.0",
+    "mode-watcher": "^0.5.0",
     "mustache": "^4.2.0",
-    "paneforge": "^0.0.5",
-    "svelte-codemirror-editor": "^1.4.0",
-    "svelte-sonner": "^0.3.27",
-    "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1"
+    "paneforge": "^0.0.6",
+    "svelte-codemirror-editor": "^1.4.1",
+    "svelte-sonner": "^0.3.28",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.0"
   }
 }
