--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-markdown": "^6.3.1",
+    "@tauri-apps/plugin-updater": "~2",
     "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
     "codemirror": "^6.65.7",
