feat(update): "fixing some issue with update"

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svelte": "^5.6.2",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^6.0.2"
@@ -46,13 +47,13 @@
     "@codemirror/lang-markdown": "^6.3.1",
     "@tauri-apps/plugin-cli": "~2",
     "@tauri-apps/plugin-updater": "~2",
-    "bits-ui": "^0.21.16",
+    "bits-ui": "^1.0.0-next.74",
     "clsx": "^2.1.1",
     "codemirror": "^6.65.7",
     "lucide-svelte": "^0.468.0",
     "mode-watcher": "^0.5.0",
     "mustache": "^4.2.0",
-    "paneforge": "^0.0.6",
+    "paneforge": "^1.0.0-next.2",
     "svelte-codemirror-editor": "^1.4.1",
     "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^2.5.5",
