--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-markdown": "^6.3.1",
     "@tauri-apps/plugin-cli": "~2.2.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-updater": "~2.3.0",
     "bits-ui": "^1.0.0-next.74",
     "clsx": "^2.1.1",
